--- a/src/webparts/htmlReader/HtmlReaderWebPart.manifest.json
+++ b/src/webparts/htmlReader/HtmlReaderWebPart.manifest.json
@@ -23,14 +23,14 @@
         "default": "Advanced",
         "zh_CN": "高级"
       },
-      "title": { "default": "HTML Reader" },
+      "title": { "default": "HTML Reader Beta" },
       "description": {
-        "default": "This web part allows you to paste HTML code. The possible XSS attack, caused by injecting HTML code containing Javascript script, has been handled, however please use this web part only when you fully trust the source.",
-        "zh_CN": "此组件允许您粘贴HTML源码并显示为页面。请您仅在代码来源完全可靠的情况下使用本组件。"
+        "default": "This web part allows you to inject HTML code snippet into your SharePoint page. Please make sure your codes don't contain any JS scripts, or the web part will stop working until scripts are removed. The web part will also purify your code behind the scene, any tags outside of body will be automatically removed. \n If you encounter any problems, please contact brian.liu@keystoneacademy.cn.",
+        "zh_CN": "此组件允许您粘贴HTML源码并显示为页面。如果您的源码中包含脚本，此组件会停止工作直到所有脚本都被删除。"
       },
       "officeFabricIconFontName": "FileCode",
       "properties": {
-        "htmlSourceCode": "<p>Click the edit button on the left to paste your HTML source code.</p>\n<p>请点击左侧编辑按钮打开粘贴界面。</p>"
+        "htmlSourceCode": ""
       }
     }
   ]
